Fixed page header spacing

--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -146,12 +146,11 @@
   border-bottom: 1px solid $colorLine;
 
     &__nav {
-      margin-left: auto;
       display: flex;
       align-items: center;
 
       &:not(:last-child) {
-        margin-right: 60px;
+        margin-right: 0px;
       }
     }
 }
@@ -199,7 +198,6 @@
     line-height: 1.1;
     letter-spacing: 0.02em;
     text-decoration: none;
-    display: flex;
     transition: $transitionKit;
   }
   
@@ -214,7 +212,7 @@
 
   &__contact {
     font-size: 12px;
-    margin-left: 0;
+    margin-left: 101px;
     display: flex;
     flex-direction: column;
     gap: 10px 0;
